# seo-aeo-playbook

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tatus
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
01-seo-fundamentals/: index.html
api/: __init__.py  app.py  models.py  routes.py
books/: index.html
checklists/: aeo.md  eeat.md  launch-checklist.md  local-seo.md  on-page.md  technical-seo.md
cli/: __init__.py  commands.py  config.py  main.py
cli-reference/: index.html
content/: index.html
docs/: 01-seo-fundamentals.md  cli-reference.md  index.md
prompts/: aeo.md  ai-overviews.md  competitor-analysis.md  content-gap.md  eeat.md  keyword-research.md  link-building.md  local-seo.md  on-page-seo.md  schema.md  seo-audit.md  seo-content.md  technical-seo.md
scripts/: __init__.py  blog_generator.py  content_brief.py  entity_extractor.py  faq_generator.py  generate_readme.py  generate_toc.py  geo_optimizer.py  init.py  internal_linker.py  keyword_cluster.py  keyword_mapper.py  link_checker.py  llms_txt_generator.py  llms_validator.py  location_page_generator.py  meta_generator.py  page_speed.py  robots_generator.py  schema_generator.py  schema_validator.py  seo_audit.py  service_page_generator.py  site_audit.py  sitemap_generator.py
search/: search_index.json
templates/: blog-template.md  faq-template.md  location-page-template.md  outreach-email.md  pillar-page-template.md  service-page-template.md
tests/: test_api.py  test_blog_generator.py  test_cli.py  test_config.py  test_content_brief.py  test_entity_extractor.py  test_faq_generator.py  test_generate_readme.py  test_init.py  (+18 more)
(+131 files in other folders)
